--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/label.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/label.xhtml
@@ -12,16 +12,24 @@
 		<composite:attribute name="labelText" />
 		<composite:attribute name="labelHelpText" />
 		<composite:attribute name="labelHelpText" />
+		<composite:attribute name="labelEscapeText" default="true"/>
 		<composite:attribute name="labelRequired" default="true" />
 	</composite:interface>
 
 	<composite:implementation>
 
 		<label for="#{cc.attrs.labelFor}" class="zlb-label">
-			#{cc.attrs.labelText}
+
+			<ui:fragment rendered="#{!cc.attrs.labelEscapeText}">
+				<h:outputText escape="false" value="#{cc.attrs.labelText}" />
+			</ui:fragment>
+
+			<ui:fragment rendered="#{cc.attrs.labelEscapeText}">
+					#{cc.attrs.labelText}
+			</ui:fragment>
 
 			<span
-				class="input-required"
+				class="input-required #{!cc.attrs.labelEscapeText}"
 				jsf:rendered="#{cc.attrs.labelRequired}"
 				>
 				<i class="fa fa-asterisk"/>
