Do not escape label text per default

--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/label.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/label.xhtml
@@ -12,7 +12,7 @@
 		<composite:attribute name="labelText" />
 		<composite:attribute name="labelHelpText" />
 		<composite:attribute name="labelHelpText" />
-		<composite:attribute name="labelEscapeText" default="true"/>
+		<composite:attribute name="labelEscapeText" default="false"/>
 		<composite:attribute name="labelRequired" default="true" />
 	</composite:interface>
 
