--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/formOutputTxt.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/formOutputTxt.xhtml
@@ -37,6 +37,7 @@
                             type="checkbox"
                             id="flexCheckCheckedDisabled"
                             checked="true"
+                            disabled="disabled"
                         />
                         <label class="sr-only form-check-label" for="flexCheckCheckedDisabled">
                             #{msgs.plugin_rest_usercreation_new_account_overview_checkedCheck_ariaLabel}
@@ -50,6 +51,7 @@
                             class="form-check-input"
                             type="checkbox"
                             id="flexCheckunCheckedDisabled"
+                            disabled="disabled"
                         />
                         <label class="sr-only form-check-label" for="flexCheckUncheckedDisabled">
                             #{msgs.plugin_rest_usercreation_new_account_overview_uncheckedCheck_ariaLabel}
