--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
@@ -72,7 +72,7 @@
 
             <!-- Checkbox needs slightly different markup -->
             <ui:fragment rendered="#{cc.attrs.fieldType=='checkbox' or cc.attrs.fieldType=='combo'}" >
-            <div class="form-check">
+            <div class="form-check #{!cc.attrs.propertyValid ? 'validate--danger' : ''}" >
                 <div class="form-check-wrapper">
 
                 <h:selectBooleanCheckbox
@@ -80,9 +80,7 @@
                     rendered="#{cc.attrs.fieldType=='checkbox' or cc.attrs.fieldType=='combo'}"
                     pt:aria-label="#{cc.attrs.labelText}"
                     styleClass="form-check-input"
-                    value="#{cc.attrs.booleanValue}"
-                    validator="#{field.validateField}"
-                    >
+                    value="#{cc.attrs.booleanValue}">
                     <f:ajax
                         render="#{cc.attrs.render}"
                         execute="@this" />
@@ -98,12 +96,14 @@
                     id="#{cc.attrs.identifier}_radio"
                     rendered="#{cc.attrs.fieldType=='combo' and cc.attrs.booleanValue}"
                     styleClass="form-control"
-                    value="#{cc.attrs.subValue}">
+                    value="#{cc.attrs.subValue}"
+                    >
                     <f:ajax
                         render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:selectItems value="#{cc.attrs.selectItems}" />
                 </h:selectOneRadio>
+
                 </div> <!-- end form-check-wraper -->
 
 
@@ -112,8 +112,19 @@
                     <ui:param name="helpTitle" value="#{cc.attrs.helpTitle}" />
                     <ui:param name="helpBody" value="#{cc.attrs.helpText}" />
                 </ui:include>
-
+                
             </div> <!-- end form-check -->
+                <!-- Help text / danger text -->
+                <h:panelGroup
+                    layout="block"
+                    rendered="#{!cc.attrs.propertyValid}"
+                    styleClass="font-danger validation-message">
+                    <h:outputText value="#{cc.attrs.errorMessageText}" />
+                </h:panelGroup>
+                <h:outputText
+                    styleClass="help-block font-light"
+                    rendered="#{NavigationForm.showHelp}"
+                    value="#{cc.attrs.labelHelpText}" />
             </ui:fragment>
 
             <ui:fragment rendered="#{cc.attrs.fieldType!='checkbox' and cc.attrs.fieldType!='combo'}" >
