--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/uploadFormButtons.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/uploadFormButtons.xhtml
@@ -17,7 +17,7 @@
 	<composite:implementation>
 
 		<button type="button" class="fake-btn fake-btn--browse btn btn-primary-400">#{msgs.plugin_dashboard_delivery_uploadFormBtn}</button>
-		<button type="button" aria-label="" class="btn btn-accent btn--url-upload" data-bs-toggle="modal" data-bs-title="" data-bs-target="#modalUploadUrl">Upload URL</button>
+		<button type="button" aria-label="" class="btn btn-accent btn--url-upload" data-bs-toggle="modal" data-bs-title="" data-bs-target="#modalUploadUrl">#{msgs.plugin_dashboard_delivery_uploadFormBtn_urlUpload}</button>
 		<button type="button" class="fake-btn fake-btn--send btn btn-outline-secondary d-none">#{msgs.plugin_dashboard_delivery_uploadFormSend}</button>
 
 	</composite:implementation>
