--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
@@ -85,7 +85,7 @@
                         itemValue="null"
                         itemLabel="#{msgs.bitteAuswaehlen}" />
                     <f:ajax
-                        render="@form"
+                        render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:selectItems value="#{cc.attrs.selectItems}" />
                 </h:selectOneMenu>
@@ -97,7 +97,7 @@
                     value="#{cc.attrs.value}"
                     validator="#{field.validateField}">
                     <f:ajax
-                        render="@form"
+                        render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:passThroughAttribute
                         name="placeholder"
