--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/corporate.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/corporate.xhtml
@@ -48,27 +48,23 @@
             id="#{cc.attrs.identifier}"
             layout="block"
             styleClass="form #{cc.attrs.mainClass}">
-            <label class="zlb-label" for="#{cc.attrs.identifier}_input">
+            <label
+                class="zlb-label"
+                for="#{cc.attrs.identifier}_input">
                 #{cc.attrs.labelText}
                 <h:panelGroup
                     styleClass="input-required"
                     rendered="#{cc.attrs.fieldRequired}">
                     <i class="fa fa-asterisk" />
                 </h:panelGroup>
-                <!--
-                <ui:include src="../uii/includes/icon-help.xhtml">
-                    <ui:param
-                        name="helpText"
-                        value="#{cc.attrs.labelHelpText}" />
-                </ui:include>
-                -->
             </label>
             <div class="form-field #{cc.attrs.subClass}">
                 <x:inputText
                     id="#{cc.attrs.identifier}_input"
                     pt:aria-label="#{cc.attrs.labelText}"
                     styleClass="form-control #{cc.attrs.fieldStyle}"
-                    value="#{cc.attrs.value}">
+                    value="#{cc.attrs.value}"
+                    validator="#{field.validateField}">
                     <f:ajax
                         render="#{cc.attrs.render}"
                         execute="@this" />
@@ -81,7 +77,8 @@
                     id="#{cc.attrs.identifier}_select"
                     styleClass="form-select #{cc.attrs.fieldStyle}"
                     value="#{cc.attrs.role}"
-                    pt:aria-label="#{cc.attrs.labelText}">
+                    pt:aria-label="#{cc.attrs.labelText}"
+                    validator="#{field.validateField}">
                     <f:selectItem
                         itemValue="null"
                         itemLabel="#{msgs.bitteAuswaehlen}" />
@@ -93,37 +90,43 @@
             </div>
 
 
-                <div class="form-icons">
-                    <h:panelGroup rendered="#{cc.attrs.displayDuplicateButton}">
-                        <button
-                            jsf:id="button"
-                            jsf:action="#{DashboardForm.plugin.duplicateMetadataField}"
-                            class="form-icons__button form-icons__button--duplicate"
-                            aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementDuplicate}">
-                            <ui:include src="/uii/includes/icon-plus.xhtml" />
-                            <f:setPropertyActionListener
-                                value="#{field}"
-                                target="#{DashboardForm.plugin.currentField}" />
-                        </button>
-                    </h:panelGroup>
-                      <!-- ICONS + HELP -->
-                      <ui:include src="/uii/includes/form_icons.xhtml">
-                        <ui:param name="duplicateElement" value="#{cc.attrs.inputDuplicate}" />
-                        <ui:param name="showHelpBtn" value="#{cc.attrs.showHelpBtn}" />
-                        <ui:param name="helpBody" value="#{cc.attrs.helpText}" />
-                      </ui:include>
-                </div>
-
-                <h:panelGroup
-                    layout="block"
-                     rendered="#{!cc.attrs.propertyValid}"
-                    styleClass="font-danger validation-message">
-                    <h:outputText value="#{cc.attrs.errorMessageText}" />
+            <div class="form-icons">
+                <h:panelGroup rendered="#{cc.attrs.displayDuplicateButton}">
+                    <button
+                        jsf:id="button"
+                        jsf:action="#{DashboardForm.plugin.duplicateMetadataField}"
+                        class="form-icons__button form-icons__button--duplicate"
+                        aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementDuplicate}">
+                        <ui:include src="/uii/includes/icon-plus.xhtml" />
+                        <f:setPropertyActionListener
+                            value="#{field}"
+                            target="#{DashboardForm.plugin.currentField}" />
+                    </button>
                 </h:panelGroup>
-                <h:outputText
-                    styleClass="help-block font-light"
-                    rendered="#{NavigationForm.showHelp}"
-                    value="#{cc.attrs.labelHelpText}" />
+                <!-- ICONS + HELP -->
+                <ui:include src="/uii/includes/form_icons.xhtml">
+                    <ui:param
+                        name="duplicateElement"
+                        value="#{cc.attrs.inputDuplicate}" />
+                    <ui:param
+                        name="showHelpBtn"
+                        value="#{cc.attrs.showHelpBtn}" />
+                    <ui:param
+                        name="helpBody"
+                        value="#{cc.attrs.helpText}" />
+                </ui:include>
+            </div>
+
+            <h:panelGroup
+                layout="block"
+                rendered="#{!cc.attrs.propertyValid}"
+                styleClass="font-danger validation-message">
+                <h:outputText value="#{cc.attrs.errorMessageText}" />
+            </h:panelGroup>
+            <h:outputText
+                styleClass="help-block font-light"
+                rendered="#{NavigationForm.showHelp}"
+                value="#{cc.attrs.labelHelpText}" />
 
         </h:panelGroup>
 
