--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/person.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/person.xhtml
@@ -1,4 +1,5 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition
+    xmlns="http://www.w3.org/1999/xhtml"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:composite="http://xmlns.jcp.org/jsf/composite"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -15,7 +16,9 @@
         <!-- #{field.helpMessage} -->
         <composite:attribute name="labelHelpText" />
         <!-- #{field.required} -->
-        <composite:attribute name="fieldRequired" default="false" />
+        <composite:attribute
+            name="fieldRequired"
+            default="false" />
         <!-- #{field.value} -->
         <composite:attribute name="value" />
         <!-- #{field.value2} -->
@@ -27,18 +30,30 @@
             name="propertyValid"
             default="true" />
         <!-- #{field.validationErrorMessage} -->
-        <composite:attribute name="errorMessageText"  />
+        <composite:attribute name="errorMessageText" />
         <!-- #{field.selectItemList} -->
-        <composite:attribute name="selectItems"  />
+        <composite:attribute name="selectItems" />
         <!-- #{field.helpMessage} ? -->
-        <composite:attribute name="placeholderText" default="" />
+        <composite:attribute
+            name="placeholderText"
+            default="" />
 
         <!-- styling options -->
-        <composite:attribute name="mainClass" default="" />
-        <composite:attribute name="subClass" default="" />
-        <composite:attribute name="fieldStyle" default="" />
-        <composite:attribute name="displayDuplicateButton" default="false" />
-        <composite:attribute name="render" default="@form" />
+        <composite:attribute
+            name="mainClass"
+            default="" />
+        <composite:attribute
+            name="subClass"
+            default="" />
+        <composite:attribute
+            name="fieldStyle"
+            default="" />
+        <composite:attribute
+            name="displayDuplicateButton"
+            default="false" />
+        <composite:attribute
+            name="render"
+            default="@form" />
     </composite:interface>
 
     <composite:implementation>
@@ -46,25 +61,25 @@
             id="#{cc.attrs.identifier}"
             layout="block"
             styleClass="form grid-row #{cc.attrs.mainClass}">
-            <label for="#{cc.attrs.identifier}_input" class="zlb-label">
+            <label
+                for="#{cc.attrs.identifier}_input"
+                class="zlb-label">
                 #{cc.attrs.labelText}
-                <h:panelGroup styleClass="input-required" rendered="#{cc.attrs.fieldRequired}">
+                <h:panelGroup
+                    styleClass="input-required"
+                    rendered="#{cc.attrs.fieldRequired}">
                     <i class="fa fa-asterisk" />
                 </h:panelGroup>
-                <!--
-                <ui:include src="../uii/includes/icon-help.xhtml">
-                    <ui:param
-                        name="helpText"
-                        value="#{cc.attrs.labelHelpText}" />
-                </ui:include>
-                -->
+
             </label>
             <div class="form-field #{cc.attrs.subClass}">
                 <x:inputText
                     id="#{cc.attrs.identifier}_input"
                     pt:aria-label="#{cc.attrs.labelText}"
                     styleClass="form-control #{cc.attrs.fieldStyle}"
-                    value="#{cc.attrs.value}">
+                    value="#{cc.attrs.value}"
+                    validator="#{field.validateField}"
+                    onfocus="focusField(this);">
                     <f:ajax
                         render="#{cc.attrs.render}"
                         execute="@this" />
@@ -77,7 +92,9 @@
                     id="#{cc.attrs.identifier}_input2"
                     pt:aria-label="#{cc.attrs.labelText}"
                     styleClass="form-control #{cc.attrs.fieldStyle}"
-                    value="#{cc.attrs.secondValue}">
+                    value="#{cc.attrs.secondValue}"
+                    validator="#{field.validateField}"
+                    onfocus="focusField(this);">
                     <f:ajax
                         render="#{cc.attrs.render}"
                         execute="@this" />
@@ -90,7 +107,9 @@
                     id="#{cc.attrs.identifier}_select"
                     styleClass="form-select #{cc.attrs.fieldStyle}"
                     value="#{cc.attrs.role}"
-                    pt:aria-label="#{cc.attrs.labelText}">
+                    pt:aria-label="#{cc.attrs.labelText}"
+                    validator="#{field.validateField}"
+                    onfocus="focusField(this);">
                     <f:selectItem
                         itemValue="null"
                         itemLabel="#{msgs.bitteAuswaehlen}" />
@@ -99,42 +118,49 @@
                         execute="@this" />
                     <f:selectItems value="#{cc.attrs.selectItems}" />
                 </h:selectOneMenu>
-                </div>
+            </div>
 
 
-                <div class="form-icons">
-                    <h:panelGroup rendered="#{cc.attrs.displayDuplicateButton}">
-                        <button
-                            jsf:id="button"
-                            jsf:action="#{DashboardForm.plugin.duplicateMetadataField}"
-                            class="form-icons__button form-icons__button--duplicate"
-                            aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementDuplicate}">
-                            <ui:include src="/uii/includes/icon-plus.xhtml" />
-                            <f:setPropertyActionListener
-                                value="#{field}"
-                                target="#{DashboardForm.plugin.currentField}" />
-                        </button>
-                    </h:panelGroup>
-
-                      <!-- ICONS + HELP -->
-                      <ui:include src="/uii/includes/form_icons.xhtml">
-                        <ui:param name="duplicateElement" value="#{cc.attrs.inputDuplicate}" />
-                        <ui:param name="showHelpBtn" value="#{cc.attrs.showHelpBtn}" />
-                        <ui:param name="helpBody" value="#{cc.attrs.helpText}" />
-                      </ui:include>
-
-                </div>
-                <!-- Help text / danger text -->
-                <h:panelGroup
-                    layout="block"
-                     rendered="#{!cc.attrs.propertyValid}"
-                    styleClass="font-danger validation-message">
-                    <h:outputText value="#{cc.attrs.errorMessageText}" />
+            <div class="form-icons">
+                <h:panelGroup rendered="#{cc.attrs.displayDuplicateButton}">
+                    <button
+                        jsf:id="button"
+                        jsf:action="#{DashboardForm.plugin.duplicateMetadataField}"
+                        class="form-icons__button form-icons__button--duplicate"
+                        aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementDuplicate}"
+                        jsf:onfocus="focusField(this);">
+                        <ui:include src="/uii/includes/icon-plus.xhtml" />
+                        <f:setPropertyActionListener
+                            value="#{field}"
+                            target="#{DashboardForm.plugin.currentField}" />
+                    </button>
                 </h:panelGroup>
-                <h:outputText
-                    styleClass="help-block font-light"
-                    rendered="#{NavigationForm.showHelp}"
-                    value="#{cc.attrs.labelHelpText}" />
+
+                <!-- ICONS + HELP -->
+                <ui:include src="/uii/includes/form_icons.xhtml">
+                    <ui:param
+                        name="duplicateElement"
+                        value="#{cc.attrs.inputDuplicate}" />
+                    <ui:param
+                        name="showHelpBtn"
+                        value="#{cc.attrs.showHelpBtn}" />
+                    <ui:param
+                        name="helpBody"
+                        value="#{cc.attrs.helpText}" />
+                </ui:include>
+
+            </div>
+            <!-- Help text / danger text -->
+            <h:panelGroup
+                layout="block"
+                rendered="#{!cc.attrs.propertyValid}"
+                styleClass="font-danger validation-message">
+                <h:outputText value="#{cc.attrs.errorMessageText}" />
+            </h:panelGroup>
+            <h:outputText
+                styleClass="help-block font-light"
+                rendered="#{NavigationForm.showHelp}"
+                value="#{cc.attrs.labelHelpText}" />
 
         </h:panelGroup>
 
