--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
@@ -121,15 +121,20 @@
                     <!-- end form-check-wraper -->
 
 
-                    <!-- ICONS -->
-                    <ui:include src="/uii/includes/form_icons.xhtml">
-                        <ui:param
-                            name="helpTitle"
-                            value="#{cc.attrs.helpTitle}" />
-                        <ui:param
-                            name="helpBody"
-                            value="#{cc.attrs.helpText}" />
-                    </ui:include>
+                    <h:panelGroup rendered="#{cc.attrs.showHelpBtn}">
+
+                        <button
+                            jsf:id="showHelp2"
+                            jsf:onfocus="focusField(this);"
+                            type="button"
+                            class="form-icons__button form-icons__button--help"
+                            aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementHelp}"
+                            data-bs-toggle="modal"
+                            data-bs-target="#exampleModal"
+                            data-bs-body="#{cc.attrs.helpText}">
+                            <ui:include src="/uii/includes/icon-help.xhtml" />
+                        </button>
+                    </h:panelGroup>
 
                 </div>
                 <!-- end form-check -->
@@ -224,7 +229,7 @@
                                 jsf:action="#{DashboardForm.plugin.duplicateMetadataField}"
                                 class="form-icons__button form-icons__button--duplicate"
                                 aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementDuplicate}"
-                                jsf:onfocus="focusField(this);">
+                                onfocus="focusField(this);">
                                 <ui:include src="/uii/includes/icon-plus.xhtml" />
                                 <f:setPropertyActionListener
                                     value="#{field}"
@@ -232,21 +237,21 @@
                             </button>
                         </h:panelGroup>
 
-                        <!-- ICONS + HELP -->
-                        <ui:include src="/uii/includes/form_icons.xhtml">
-                            <ui:param
-                                name="duplicateElement"
-                                value="#{cc.attrs.inputDuplicate}" />
-                            <ui:param
-                                name="showHelpBtn"
-                                value="#{cc.attrs.showHelpBtn}" />
-                            <ui:param
-                                name="helpTitle"
-                                value="#{cc.attrs.helpTitle}" />
-                            <ui:param
-                                name="helpBody"
-                                value="#{cc.attrs.helpText}" />
-                        </ui:include>
+                        <h:panelGroup rendered="#{cc.attrs.showHelpBtn}">
+                            <button
+                                jsf:id="showHelpField"
+                                jsf:onfocus="focusField(this);"
+                                type="button"
+                                class="form-icons__button form-icons__button--help"
+                                aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementHelp}"
+                                data-bs-toggle="modal"
+                                data-bs-target="#exampleModal"
+                                data-bs-body="#{cc.attrs.helpText}"
+                                data-bs-title="#{cc.attrs.helpTitle}">
+                                <ui:include src="/uii/includes/icon-help.xhtml" />
+                            </button>
+                        </h:panelGroup>
+
                     </div>
 
                     <!-- Help text / danger text -->
