--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
@@ -63,8 +63,7 @@
             styleClass="form grid-row #{cc.attrs.mainClass}">
             <label
                 for="#{cc.attrs.identifier}_input"
-                class="zlb-label"
-                >
+                class="zlb-label">
                 #{cc.attrs.labelText}
                 <h:panelGroup
                     styleClass="input-required"
@@ -125,20 +124,28 @@
                         jsf:action="#{DashboardForm.plugin.duplicateMetadataField}"
                         class="form-icons__button form-icons__button--duplicate"
                         aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementDuplicate}"
-                        jsf:onfocus="focusField(this);">
+                        onfocus="focusField(this);">
                         <ui:include src="/uii/includes/icon-plus.xhtml" />
                         <f:setPropertyActionListener
                             value="#{field}"
                             target="#{DashboardForm.plugin.currentField}" />
                     </button>
-
                 </h:panelGroup>
 
-                  <ui:include src="/uii/includes/form_icons.xhtml">
-                    <ui:param name="duplicateElement" value="#{cc.attrs.inputDuplicate}" />
-                    <ui:param name="showHelpBtn" value="#{cc.attrs.showHelpBtn}" />
-                    <ui:param name="helpBody" value="#{cc.attrs.helpText}" />
-                  </ui:include>
+                <h:panelGroup rendered="#{cc.attrs.showHelpBtn}">
+                    <button
+                        jsf:id="showHelpPicklist"
+                        jsf:onfocus="focusField(this);"
+                        type="button"
+                        class="form-icons__button form-icons__button--help"
+                        aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_elementHelp}"
+                        data-bs-toggle="modal"
+                        data-bs-target="#exampleModal"
+                        data-bs-body="#{cc.attrs.helpText}"
+                        data-bs-title="#{cc.attrs.helpTitle}">
+                        <ui:include src="/uii/includes/icon-help.xhtml" />
+                    </button>
+                </h:panelGroup>
             </div>
 
 
